# LoopAnalysis

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  env.sh
src/: CMakeLists.txt  EC.h  EC.hpp  ECG.h  ICFGWTO.hpp  ICFGWrapper.h  ICFGWrapperWto.hpp  InterLoopFlattenHandler.cpp  InterLoopFlattenHandler.h  IntraLoopFlattenHandler.cpp  IntraLoopFlattenHandler.h  LoopAnalysis.cpp  LoopAnalysis.h  LoopFlattenHandler.h  RecursiveAnalysis.cpp  RecursiveAnalysis.h  WTO.hpp  main.cpp
src/test/: CMakeLists.txt  loopTest.cpp
